infrastructure/controllers/base/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress-tls
  namespace: arctic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.thefoxnet.co.uk"
      secretName: wildcard-thefoxnet-tls
  defaultBackend:
    service:
      name: server-entrypage
      port:
        number: 80
